--- a/polling-app-client/public/index.html
+++ b/polling-app-client/public/index.html
@@ -10,6 +10,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -20,7 +21,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Peasant Polls</title>
-    <meta name="description" content="Full Stack Polling App built with Spring Boot, Spring Security, JWT, MySQL, React and Ant Design.">
+    <meta name="description" content="Polling Application">
   </head>
   <body>
     <noscript>
